# TradeInterface

./: CMakeLists.txt
JZXInterface/: CMakeLists.txt  ImpTradeSession.cpp  ImpTradeSession.h  JZXInterface.xml  KCBPCli.h  encode_dll_wrapper.cpp  encode_dll_wrapper.h  main.cpp  testdll.cpp
JZXInterface/doc/: clienttest.cpp
com/: TradeAPI.h  record_set.cpp  record_set.h  time_utlity.cpp  time_utlity.h  uField.cpp  uField.h  utlity.cpp  utlity.h
